# patmos-newlib

./: .gitignore  README.md  README.patmos  config.sub  configure  configure.ac
libgloss/: configure  configure.in
libgloss/config/: default.mh  default.mt
libgloss/libnosys/: Makefile.in  configure  configure.in
libgloss/patmos/: Makefile.in  chmod.c  chown.c  close.c  configure  configure.in  crt0.c  crtbegin.c  crtend.c  exec.c  exit.c  foo.c  fork.c  fstat.c  ftruncate.c  getpid.c  isatty.c  kill.c  link.c  lock.c  lseek.c  open.c  patmos.h  pthread.c  pthread_cond.c  pthread_mutex.c  read.c  sbrk.c  stat.c  swsc.c  time.c  times.c  unlink.c  wait.c  write.c
newlib/: configure.host
newlib/doc/: makedoc.c
newlib/libc/include/machine/: ieeefp.h  setjmp.h
newlib/libc/include/sys/: config.h  reent.h  types.h
newlib/libc/machine/: configure  configure.in
newlib/libc/machine/patmos/: Makefile.am  Makefile.in  configure  configure.in  setjmp.c  setjmp.ll  spm.c
newlib/libc/machine/patmos/include/: pthread.h  pthread_cond.h  pthread_mutex.h  time.h
newlib/libc/machine/patmos/machine/: boot.h  exceptions.h  param.h  patmos.h  rtc.h  spm.h  time.h  types.h  uart.h
newlib/libc/machine/patmos/sys/: lock.h
newlib/libc/reent/: Makefile.in  fcntlr.c  mkdirr.c
newlib/libc/search/: Makefile.in
newlib/libc/sys/rtems/machine/: _types.h
newlib/libc/syscalls/: Makefile.in  sysisatty.c
newlib/libm/math/: e_sqrt.c  ef_sqrt.c
